@@ -20,6 +20,7 @@ Version 1.4.8 - CVS
     config_base_location to config.php and a new option to conf.pl. This is
     to prevent problems in installs where our heuristic doesn't work
     correctly (#1521299, #1460675, #1110064, #1000850, #1113791).
+  - Fixed mailbox and header sanitizing in src/search.php.
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
